# beavered-websubmit

./: .gitignore  .gitmodules  Cargo.toml  additional_checks.frg  baseline-del-props.frg  baseline-dis-props.frg  baseline-external-annotations.json  baseline-sc-props.frg  baseline_dis_props.frg  basic_helpers.frg  external_annotations.json  framework_helpers.frg  instances.json  instances_no_problems.json  instances_problems.json  lib-del-props.frg  lib-dis-props.frg  lib-external-annotations.json  lib-external-annotations.toml  lib-sc-props.frg  lib_framework_helpers.frg  manual_analysis-dis-3a.frg  manual_analysis_result.frg  props.frg  sanity_checks.frg  strict-del-props.frg  strict-dis-props.frg  strict-external-annotations.json  strict-external-annotations.toml  strict-sc-props.frg  ttt_serialization.rkt
cpp/: CMakeLists.txt  admin.cpp  args.cpp  args.hpp  backend.cpp  config.cpp  config.hpp  email.cpp  email.hpp  login.cpp  login.hpp  main.cpp  questions.cpp  questions.hpp
cpp/src/: admin.hpp  apikey.cpp  apikey.hpp  args.cpp  backend.cpp  backend.hpp  config.cpp  config.hpp  email.cpp  login.cpp  login.hpp  main.cpp  questions.cpp  questions.hpp
eval-driver/: Cargo.toml
frg/: baseline-del-props.frg  baseline-dis-props.frg  baseline-sc-props.frg  basic_helpers.frg  err_msg_optimized_sigs.frg  err_msg_sigs.frg  err_msg_template_minimal.frg  err_msg_template_optimized.frg  err_msg_template_original.frg  framework_helpers.frg  lib-del-props.frg  lib-dis-props.frg  lib-sc-props.frg  lib_framework_helpers.frg  manual_analysis-dis-3a.frg  sigs.frg  strict-del-props.frg  strict-dis-props.frg  strict-sc-props.frg  strict_framework_helpers.frg
harness/: Cargo.toml
old_helpers/: basic_helpers.frg
src/: admin.rs  apikey.rs  backend.rs  config.rs  email.rs  main.rs  questions.rs  (+1 more)
(+3 files in other folders)
